--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "classnames": "^2.3.1",
     "graphql": "^16.1.0",
     "graphql-request": "^3.7.0",
     "html-react-parser": "^1.4.2",
@@ -13,6 +15,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "sass": "^1.44.0"
   },
