--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
-    "sass": "^1.44.0"
+    "react-scroll-to": "^3.0.0-beta.6",
+    "sass": "^1.44.0",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
