--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "html-react-parser": "^1.4.2",
     "moment": "^2.29.1",
     "next": "latest",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-scroll-to": "^3.0.0-beta.6",
+    "react-scroll-to-top": "^1.0.8",
     "sass": "^1.44.0",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
