--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
+    "react-scroll-parallax": "^2.4.0",
     "react-scroll-to": "^3.0.0-beta.6",
     "react-scroll-to-top": "^1.0.8",
     "sass": "^1.44.0",
