--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-react-parser": "^1.4.2",
     "moment": "^2.29.1",
     "next": "latest",
+    "next-share": "^0.12.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
